@@ -135,11 +135,15 @@ class Backend(AbstractBackend, metaclass=ABCDocstMeta):
         elif is_temp_network_error(exc):
             return True
 
-        # In doubt, we retry on 5xx. However, there are some codes
-        # where retry is definitely not desired.
-        elif (isinstance(exc, HTTPError)
-              and exc.status >= 500 and exc.status <= 599
-              and exc.status not in (501,505,508,510,511,523)):
+        # In doubt, we retry on 5xx (Server error). However, there are some
+        # codes where retry is definitely not desired. For 4xx (client error) we
+        # do not retry in general, but for 408 (Request Timeout) RFC 2616
+        # specifies that the client may repeat the request without
+        # modifications.
+        elif (isinstance(exc, HTTPError) and
+              ((500 <= exc.status <= 599
+                and exc.status not in (501,505,508,510,511,523))
+               or exc.status == 408)):
             return True
 
         return False
